<resources>
    <string name="app_name">M&amp;R Liquors</string>
    <string name="activity_main">Enter</string>
    <string name="activity_second">Main Menu</string>
    <string name="activity_third">Tall Boys</string>
    <string name="activity_fourth">24 and 30 packs</string>
    <string name="tallboy1">Smirnoff Smash Peach</string>
    <string name="tallboy2">Smirnoff Smash Red &amp; Blue</string>
    <string name="tallboy3">Sauza Pineapple</string>
    <string name="tallboy4">Sauza Lime</string>
    <string name="tallboy5">Twisted Tea</string>
    <string name="tallboy6">Twisted Tea Half &amp; Half</string>
    <string name="tallboy7">Twisted Tea Raspberry</string>
    <string name="tallboy8">Natural Ice</string>
    <string name="tallboy9">Icehouse</string>
    <string name="tallboy10">Budweiser</string>
    <string name="tallboy11">Bud Ice</string>
    <string name="tallboy12">Bud Light</string>
    <string name="tallboy13">Bud Light Lime</string>
    <string name="tallboy14">Modelo</string>
    <string name="tallboy15">Lime-A-Rita</string>
    <string name="tallboy16">Straw-Ber-Rita</string>
    <string name="tallboy17">Arnold Palmer</string>
    <string name="tallboy18">Mikes Harder Mango</string>
    <string name="tallboy19">Mikes Harder Cranberry</string>
    <string name="tallboy20">Mikes Harder Lemon</string>
    <string name="tallboy21">Mikes Harder Straw Pineapple</string>
    <string name="tallboy22">Mikes Harder Black Cherry</string>
    <string name="tallboy23">Coors Light</string>
    <string name="tallboy24">Steel Reserve</string>
    <string name="tallboy25">Reds Wicked Apple</string>
    <string name="tallboy26">Angry Orchard</string>
    <string name="tallboy27">Bevy</string>
    <string name="tallboy28">Guinness Glass</string>
    <string name="tallboy29">Guinness Cans</string>
    <string name="tallboy30">Sierra Nevada Torpedo</string>
    <string name="tallboy31">Corona</string>
    <string name="tallboy32">PBR</string>
    <string name="tallboy33">Heineken Cans</string>
    <string name="tallboy34">Stella Artois</string>
    <string name="tallboy35">Yuengling</string>
    <string name="tallboy36">Michelob Ultra</string>
    <string name="tallboy37">Smirnoff Ice</string>
    <string name="tallboy38">Heineken Glass</string>
    <string name="tallboy39">Natural Ice 40oz</string>
    <string name="tallboy40">Bud Light 40oz</string>
    <string name="tallboy41">Budweiser 40oz</string>
    <string name="tallboy42">Green Fosters</string>
    <string name="tallboy43">Blue Fosters</string>
    <string name="tallboy44">Steel Reserve 40oz</string>
    <string name="tallboy45">Asahi</string>
    <string name="tallboy46">Sapporo</string>
    <string name="tallboy47">Sierra Nevada Blue</string>
    <string name="tallboy48">Sierra Nevada Purple</string>
    <string name="tallboy49">\????????</string>
    <string name="tallboy50">DogFish Head Green</string>
    <string name="tallboy51">Harpoon</string>
    <string name="tallboy52">Lagunitas</string>
    <string name="tallboy53">Founders</string>
    <string name="tallboy54">Voodoo Orange</string>
    <string name="tallboy55">Voodoo Yellow</string>
    <string name="tallboy56">Truly Wild Berry 16oz</string>
    <string name="tallboy57">Truly Extra Berry Blast</string>
    <string name="tallboy58">Truly Extra Pine Orange</string>
    <string name="tallboy59">Michelob Lime</string>
    <string name="tallboy60">Michelob Berry</string>
    <string name="tallboy61">Truly Pineapple</string>
    <string name="tallboy62">Truly Wild Berry</string>
    <string name="tallboy63">White Claw Mango</string>
    <string name="tallboy64">White Claw Surge Cranberry</string>
    <string name="tallboy65">White Claw Surge Orange</string>
    <string name="tallboy66">8oz Busch Light</string>
    <string name="tallboy67">8oz Miller Lite</string>
    <string name="tallboy68">8oz Natural Ice</string>
    <string name="tallboy69">8oz Natural Light</string>
    <string name="tallboy70">8oz Busch</string>
    <string name="tallboy71">8oz Coors Light</string>
    <string name="tallboy72">16oz Coors Light</string>
    <string name="tallboy73">8oz Bud Light</string>
    <string name="tallboy74">16oz Bud Light</string>
    <string name="tallboy75">8oz Budweiser</string>
    <string name="tallboy76">16oz Budweiser</string>




    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="negative">-</string>
    <string name="confirm">Confirm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="reset">RESET</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>